--- a/5/src/assets/includes/login.html
+++ b/5/src/assets/includes/login.html
@@ -1,4 +1,4 @@
-<form action="assets\forms\login.php" method="post">
+<form action="user.php" method="post">
   Email: <input type="email" name="email" value="" required/>
   Password: <input type="password" name="passwd" value="" required/>
   <input type="submit" value="Log In" />
