--- a/project/src/assets/style.css
+++ b/project/src/assets/style.css
@@ -27,6 +27,7 @@ a:hover{
   text-align: left;
   width: 50%;
   padding: 0px;
+  font-family: 'Ubuntu', sans-serif;
 }
 #topRight{
   text-align: right;
@@ -40,6 +41,10 @@ center{
   margin-bottom: 2em;
   padding-top: 1em;
   height: 100%;
+}
+footer{
+  font-size: 50%;
+  font-family: 'Ubuntu', sans-serif;
 }
 a:hover{
   color: #83a598;
