--- a/project/src/assets/style.css
+++ b/project/src/assets/style.css
@@ -111,3 +111,11 @@ input{
 .libView .button{
   width: 24%;
 }
+.styled-select{
+  border: 1px solid #ccc;
+  height: 34px;
+  width: 90%;
+  margin:auto;
+  border-radius: 15px;
+  background-color: darkseagreen;
+}
